# python-akeneo

./: .gitignore  Readme.md  pyproject.toml
.github/workflow/: testpub.yml
.github/workflows/: python-test-publish.yml
src/akeneo/: akeneo.py
