[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "akeneo"
version = "0.0.21"
authors = [
  { name="Thomas Solenthaler" },
]
description = "A small package for the Akeneo API"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tsolenthaler/python-akeneo"
"Bug Tracker" = "https://github.com/tsolenthaler/python-akeneo/issues"